# cvPlayground

./: .gitmodules  CMakeLists.txt  cmake_notes.sh  notes.cpp  playground.cpp  serial.cpp  serial.h  work.sh
src/: face.cpp  face.h  motionCalculator.cpp  motionCalculator.h  playground.cpp
